<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/welcome_description"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcom_message"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvDescriptionMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_description"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_btn_getstarted"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/get_started"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvAcceptTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/accept_msg"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>